[gd_scene load_steps=5 format=3 uid="uid://cr8ikhcgcuwen"]

[ext_resource type="Script" path="res://Terrain/Breakable/WeakFloor.gd" id="1_u6su2"]
[ext_resource type="Texture2D" uid="uid://ch0riwkrqwvw8" path="res://Terrain/Breakable/weakFloor.png" id="2_ogot0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0g5w"]
size = Vector2(50, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fp18c"]
size = Vector2(50, 10)

[node name="Breakable" type="ColorRect"]
clip_children = 2
offset_right = 50.0
offset_bottom = 34.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_u6su2")

[node name="Polygon2D" type="Polygon2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_ogot0")
polygon = PackedVector2Array(0, 0, 1000, 0, 1000, 50, 0, 50)

[node name="Terrain" type="RigidBody2D" parent="."]
position = Vector2(25, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain"]
position = Vector2(0, 17.5)
shape = SubResource("RectangleShape2D_u0g5w")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(25, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 17.5)
shape = SubResource("RectangleShape2D_u0g5w")

[node name="PlayerDetector" type="RigidBody2D" parent="."]
position = Vector2(25, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_fp18c")
one_way_collision = true

[node name="Timer" type="Timer" parent="."]

[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
